# temple

./: CMakeLists.txt  CMakePresets.json  MyApp.pkg  build_and_install.sh  icon.icns  readme.md
.cache/clangd/index/: main.cpp.C796CEA82303456F.idx
include/: LicenseModel.hpp  MyFrame.hpp
src/: LicenseModel.cpp  MyFrame.cpp  main.cpp
